--- a/frontend/app/templates/anime/_featured_quotes.hbs
+++ b/frontend/app/templates/anime/_featured_quotes.hbs
@@ -1,4 +1,4 @@
-{{#each featuredQuotes as |quote|}}
+{{#each model.featuredQuotes as |quote|}}
   <div class="quote">
     <p>"{{quote.content}}"</p>
     <span class="quote-author">- {{quote.characterName}}</span>
