--- a/frontend/app/templates/components/post-comment.hbs
+++ b/frontend/app/templates/components/post-comment.hbs
@@ -1,5 +1,5 @@
 <div class="panel-body status-panel">
-  {{textarea class="status-form" placeholder="Write something..." rows="1" valueBinding="newPost"}}
+  {{textarea class="status-form" placeholder="Write something..." rows="1" value=newPost}}
 </div>
 <div class="panel-footer">
   <button class="btn status-button" {{action "submitPost"}}>Post</button>
