--- a/frontend/app/templates/manga/_infobar.hbs
+++ b/frontend/app/templates/manga/_infobar.hbs
@@ -1,16 +1,16 @@
 <ul class="series-metadata">
-  <li>{{mangaType}}</li>
+  <li>{{model.mangaType}}</li>
   <li>
-    {{#if volumeCount}}
-      {{volumeCount}}
+    {{#if model.volumeCount}}
+      {{model.volumeCount}}
     {{else}}
       ?
     {{/if}}
     volumes
   </li>
   <li>
-    {{#if chapterCount}}
-      {{chapterCount}}
+    {{#if model.chapterCount}}
+      {{model.chapterCount}}
     {{else}}
       ?
     {{/if}}
