--- a/frontend/app/templates/story/deleted.hbs
+++ b/frontend/app/templates/story/deleted.hbs
@@ -1,5 +1,5 @@
 <div class="deleted-story">
-  {{#if isDirty}}
+  {{#if model.isDirty}}
     Deleting... <i class="fa fa-spin fa-spinner"></i>
   {{else}}
     Deleted.
