--- a/frontend/app/templates/user/manga-library.hbs
+++ b/frontend/app/templates/user/manga-library.hbs
@@ -10,8 +10,8 @@
                   Manga Library <i class="fa fa-caret-down"></i>
                 </button>
                 <ul class="dropdown-menu">
-                  <li>{{#link-to 'user.library' user}} Anime Library{{/link-to}}</li>
-                  <li>{{#link-to 'user.manga_library' user}} Manga Library{{/link-to}}</li>
+                  <li>{{#link-to 'user.library' user.model}} Anime Library{{/link-to}}</li>
+                  <li>{{#link-to 'user.manga_library' user.model}} Manga Library{{/link-to}}</li>
                 </ul>
               </div>
             </div>
