--- a/frontend/app/templates/kotodama.hbs
+++ b/frontend/app/templates/kotodama.hbs
@@ -14,7 +14,7 @@
             <li><a class="btn" href="/kibana">Kibana</a></li>
             <li>
               {{#link-to 'edits' class="btn"}}
-                {{pluralize pending_count "Pending Edit" "Pending Edits"}}
+                {{pluralize model.pending_count "Pending Edit" "Pending Edits"}}
               {{/link-to}}
             </li>
           </ul>
@@ -35,18 +35,18 @@
             <tbody>
               <tr><td>Registrations</td><td>{{accountsNew}}</td></tr>
               <tr><td>Confirmed Accounts</td><td>{{accountsCnf}}</td></tr>
-              <tr><td>Active Accounts</td><td>{{activeaccs}}</td></tr>
-              <tr><td>Feed posts</td><td>{{feedposts}}</td></tr>
-              <tr><td>Feed updates</td><td>{{feedcomments}}</td></tr>
-              <tr><td>Feed likes</td><td>{{feedlikes}}</td></tr>
-              <tr><td>Group joins</td><td>{{groupjoins}}</td></tr>
+              <tr><td>Active Accounts</td><td>{{model.activeaccs}}</td></tr>
+              <tr><td>Feed posts</td><td>{{model.feedposts}}</td></tr>
+              <tr><td>Feed updates</td><td>{{model.feedcomments}}</td></tr>
+              <tr><td>Feed likes</td><td>{{model.feedlikes}}</td></tr>
+              <tr><td>Group joins</td><td>{{model.groupjoins}}</td></tr>
             </tbody>
           </table>
         </div>
       </div>
 
       <div class="panel panel-default">
-        <div class="panel-heading">Deploy Hummingbird [Current: {{sha_hash}}]</div>
+        <div class="panel-heading">Deploy Hummingbird [Current: {{model.sha_hash}}]</div>
         <div class="panel-body">
           <button class="form-control btn status-button" {{action 'deploy'}}>Good Luck!</button>
           {{#if hasDeployed}}
@@ -160,9 +160,9 @@
             <tbody>
               {{#each partnerDeals itemController="kotodama.partner-deal" as |deal|}}
                 <tr>
-                  <td>{{deal.partner_name}}</td>
-                  <td>{{deal.deal_title}}</td>
-                  <td>{{deal.codes_remaining}}</td>
+                  <td>{{deal.model.partner_name}}</td>
+                  <td>{{deal.model.deal_title}}</td>
+                  <td>{{deal.model.codes_remaining}}</td>
                   <td>
                     {{#if deal.isRefilling}}
                       Refilling...
