--- a/frontend/app/templates/manga/_characters.hbs
+++ b/frontend/app/templates/manga/_characters.hbs
@@ -1,5 +1,5 @@
 <ul class="cast">
-  {{#each featuredCastings as |casting|}}
+  {{#each model.featuredCastings as |casting|}}
     <li class="casting">
       <a class="character">
         <img {{bind-attr src=casting.character.image}} width="30" height="47">
