--- a/frontend/app/templates/modals/story-likes.hbs
+++ b/frontend/app/templates/modals/story-likes.hbs
@@ -5,7 +5,7 @@
       <hr>
       <div class="all-likes">
         <div class="section-label">
-          <i class="fa fa-heart"></i> {{totalVotes}}
+          <i class="fa fa-heart"></i> {{model.totalVotes}}
         </div>
         <ul>
           {{#each likers as |liker|}}
