--- a/frontend/app/templates/story/comment.hbs
+++ b/frontend/app/templates/story/comment.hbs
@@ -1,43 +1,43 @@
-<div {{bind-attr class=":update-panel isNew"}}>
+<div {{bind-attr class=":update-panel model.isNew"}}>
   <div class="row">
     <div class="user-info-bar">
       <div class="user-image">
-        {{#link-to 'user' poster}}
-          {{unbound avatar poster "thumb_small"}}
+        {{#link-to 'user' model.poster}}
+          {{unbound avatar model.poster "thumb_small"}}
         {{/link-to}}
       </div>
       <div class="comment-content">
         <h4 class="story-title">
-          {{#link-to 'user' poster}}{{unbound poster.username}}{{/link-to}}
+          {{#link-to 'user' model.poster}}{{unbound model.poster.username}}{{/link-to}}
           {{#unless selfPost}}
             <i class="fa fa-share reply-icon"></i>
-            {{#link-to 'user' user}}{{unbound user.username}}{{/link-to}}
+            {{#link-to 'user' model.user}}{{unbound model.user.username}}{{/link-to}}
           {{else}}
-            {{#if user.isPro}}
+            {{#if model.user.isPro}}
               {{#link-to 'pro'}}<span class="mini-badge">pro</span>{{/link-to}}
             {{/if}}
-            {{#if group}}
+            {{#if model.group}}
               {{! don't show this if we are actually on the group page }}
               {{#unless isOnGroupPage}}
                 posted to
-                {{#link-to 'group' group}}{{unbound group.name}}{{/link-to}}
+                {{#link-to 'group' model.group}}{{unbound model.group.name}}{{/link-to}}
               {{/unless}}
             {{/if}}
           {{/unless}}
         </h4>
         <p class="secondary">
-          {{time-ago time=createdAt}}
+          {{time-ago time=model.createdAt}}
           ·
-          {{#link-to 'story.permalink' this class="permalink"}}
+          {{#link-to 'story.permalink' model class="permalink"}}
             permalink
           {{/link-to}}
-          {{#if canToggleNSFW}}
+          {{#if model.canToggleNSFW}}
             ·
             <a class="remove-post" {{action "toggleNSFW"}}>
-              {{#if adult}}remove{{else}}set{{/if}} nsfw
+              {{#if model.adult}}remove{{else}}set{{/if}} nsfw
             </a>
           {{/if}}
-          {{#if canDeleteStory}}
+          {{#if model.canDeleteStory}}
             ·
             <a class="remove-post" {{action "deleteStory"}}>remove</a>
           {{/if}}
@@ -51,10 +51,10 @@
         <a {{action "showCollapsedPost"}}>Show NSFW Content</a>
       {{else}}
         <p {{bind-attr class=":comment-text isExpanded:full-post" }}>
-          {{#if isNew}}
-            {{unbound comment}}
+          {{#if model.isNew}}
+            {{unbound model.comment}}
           {{else}}
-            {{{unbound comment}}}
+            {{{unbound model.comment}}}
           {{/if}}
         </p>
       {{/if}}
@@ -68,16 +68,16 @@
 </div>
 
 <div class="story-actions">
-  {{#if adult}}
+  {{#if model.adult}}
     <span class="nsfw-indicator" data-tooltip="This post has been marked as nsfw!">
       <i class="fa fa-warning"></i>
     </span>
   {{/if}}
-  <a {{bind-attr class=":like isLiked:active"}} {{action "toggleLike"}}>
-    <i class="fa fa-heart-o"></i> {{totalVotes}}
+  <a {{bind-attr class=":like model.isLiked:active"}} {{action "toggleLike"}}>
+    <i class="fa fa-heart-o"></i> {{model.totalVotes}}
   </a>
   <ul class="active-users">
-    {{#each recentLikers as |liker|}}
+    {{#each model.recentLikers as |liker|}}
       <li {{bind-attr data-tooltip=liker.username}}>
         {{#link-to 'user' liker.id}}
           {{unbound avatar liker "thumb_small"}}
@@ -107,7 +107,7 @@
             {{#if showAll}}
               Show Less
             {{else}}
-              Show {{pluralize omittedSubstoryCount "more reply" "more replies"}}
+              Show {{pluralize model.omittedSubstoryCount "more reply" "more replies"}}
             {{/if}}
           </a>
         {{/if}}
@@ -146,9 +146,9 @@
       </div>
     {{/each}}
     {{#if currentUser.isSignedIn}}
-      {{#if group}}
-        {{#if group.currentMember}}
-          {{#unless group.currentMember.pending}}
+      {{#if model.group}}
+        {{#if model.group.currentMember}}
+          {{#unless model.group.currentMember.pending}}
             <div class="reply-form">
               {{expanding-textarea value=reply rows="1" placeholder="Leave a comment..." enterAction="submitReply"}}
             </div>
