--- a/frontend/app/templates/story/followed.hbs
+++ b/frontend/app/templates/story/followed.hbs
@@ -1,16 +1,16 @@
 <div class="update-panel">
   <div class="user-image">
-    {{#link-to 'user' user}}{{avatar user "thumb_small"}}{{/link-to}}
+    {{#link-to 'user' model.user}}{{avatar model.user "thumb_small"}}{{/link-to}}
   </div>
   <div class="comment-content">
     <h4 class="story-title">
-      {{#link-to 'user' user}}{{user.username}}{{/link-to}}
+      {{#link-to 'user' model.user}}{{model.user.username}}{{/link-to}}
       followed
-      {{pluralize substoryCount "user" "users"}}
+      {{pluralize model.substoryCount "user" "users"}}
     </h4>
     <p class="secondary">
-      {{time-ago time=createdAt}}
-      {{#if canDeleteStory}}
+      {{time-ago time=model.createdAt}}
+      {{#if model.canDeleteStory}}
         ·
         <a class="remove-post" {{action "deleteStory"}}>remove</a>
       {{/if}}
