--- a/frontend/app/templates/story/permalink.hbs
+++ b/frontend/app/templates/story/permalink.hbs
@@ -5,36 +5,36 @@
     </div>
     <div class="col-sm-5">
       <div class="follow-panel">
-        {{#link-to 'user' user}}
-          <div class="follow-cover" {{bind-attr style=user.coverImageStyle}}></div>
+        {{#link-to 'user' model.user}}
+          <div class="follow-cover" {{bind-attr style=model.user.coverImageStyle}}></div>
         {{/link-to}}
         <div class="user-avatar">
-          {{#link-to 'user' user}}
-            {{avatar user 'thumb'}}
+          {{#link-to 'user' model.user}}
+            {{avatar model.user 'thumb'}}
           {{/link-to}}
 
-          {{follow-button user=user}}
+          {{follow-button user=model.user}}
 
         </div>
         <div class="user-info">
           <h4>
-            {{#link-to 'user' user}}
-              {{user.username}}
+            {{#link-to 'user' model.user}}
+              {{model.user.username}}
             {{/link-to}}
           </h4>
           <p class="mini-bio">
-            {{user.truncatedBio}}
+            {{model.user.truncatedBio}}
           </p>
         </div>
       </div>
 
       {{#if group}}
-        {{group-box group=group}}
+        {{group-box group=model.group}}
       {{/if}}
 
       {{#unless currentUser.isSignedIn}}
         <div class="guest-cta">
-          <p>{{user.username}} is using Hummingbird to track, discover and discuss anime and manga with friends. Don't miss any of {{user.username}}'s updates.</p>
+          <p>{{model.user.username}} is using Hummingbird to track, discover and discuss anime and manga with friends. Don't miss any of {{model.user.username}}'s updates.</p>
           {{#link-to 'sign-up' class="btn follow-button"}}Create an Account{{/link-to}}
         </div>
       {{/unless}}
