--- a/frontend/app/templates/user/index.hbs
+++ b/frontend/app/templates/user/index.hbs
@@ -5,7 +5,7 @@
     <div class="secondary-info">
       <div class="user-about-panel">
         <div class="panel-heading">
-          <h3 class="panel-title"> About {{user.username}}</h3>
+          <h3 class="panel-title"> About {{user.model.username}}</h3>
           <span class="edit-panel">
             {{#if viewingSelf}}
               {{#if isEditing}}
@@ -24,35 +24,35 @@
             <div {{bind-attr class=":edit-bio-chars aboutCharactersLeft:hasleft:noleft"}}>
               {{aboutCharacterCount}} left
             </div>
-            {{textarea class="edit-bio" rows="4" placeholder="Tell us about yourself. :3" value=user.truncatedAbout}}
+            {{textarea class="edit-bio" rows="4" placeholder="Tell us about yourself. :3" value=user.model.truncatedAbout}}
 
             <div class="user-interests">
               <ul>
                 <li>
                   <div class="interest-icon"> <i class="fa fa-heart"></i></div>
                   <div class="interest">
-                    {{{view "select" content=selectChoices selection=user.waifuOrHusbando}}}
-                    {{#if user.waifu}}
+                    {{{view "select" content=selectChoices selection=user.model.waifuOrHusbando}}}
+                    {{#if user.model.waifu}}
                       <a class="remove-waifu" {{action "unselectWaifu"}}> Remove</a>
                     {{/if}}
-                    {{{waifu-selector action="didSelectWaifu" value=user.waifu clearInput=unselectingWaifu}}}
+                    {{{waifu-selector action="didSelectWaifu" value=user.model.waifu clearInput=unselectingWaifu}}}
                   </div>
                 </li>
                 <li>
                   <div class="interest-icon"> <i class="fa fa-home"></i></div>
-                  <div class="interest"> {{input type="text" placeholder="Location" value=user.location}}</div>
+                  <div class="interest"> {{input type="text" placeholder="Location" value=user.model.location}}</div>
                 </li>
                 <li>
                   <div class="interest-icon"> <i class="fa fa-link"></i></div>
-                  <div class="interest"> {{input type="text" placeholder="Website" value=user.website}}</div>
+                  <div class="interest"> {{input type="text" placeholder="Website" value=user.model.website}}</div>
                 </li>
               </ul>
             </div>
           {{else}}
             {{#if hasAboutSection}}
               <p class="about">
-                {{#if user.aboutDisplay}}
-                  {{{user.aboutDisplay}}}
+                {{#if user.model.aboutDisplay}}
+                  {{{user.model.aboutDisplay}}}
                 {{/if}}
               </p>
               <div class="user-interests">
@@ -61,15 +61,15 @@
                     {{#if hasWaifu}}
                       <div class="interest-icon"> <i class="fa fa-heart"></i></div>
                       <div class="interest">
-                        {{user.waifuOrHusbando}} is
-                        {{#link-to 'anime' waifu_slug}} {{user.waifu}}{{/link-to}}
+                        {{user.model.waifuOrHusbando}} is
+                        {{#link-to 'anime' waifu_slug}} {{user.model.waifu}}{{/link-to}}
                       </div>
                     {{/if}}
                   </li>
                   <li>
                     {{#if hasLocation}}
                       <div class="interest-icon"> <i class="fa fa-home"></i></div>
-                      <div class="interest"> Lives in <strong>{{user.location}}</strong></div>
+                      <div class="interest"> Lives in <strong>{{user.model.location}}</strong></div>
                     {{/if}}
                   </li>
                   <li>
