fix missed ObjectController model reference

--- a/frontend/app/templates/user/index.hbs
+++ b/frontend/app/templates/user/index.hbs
@@ -195,12 +195,12 @@
       {{/if}}
 
 
-      {{favorite-container favorites=favoriteAnime containerType="anime" currentUser=currentUser user=user}}
+      {{favorite-container favorites=favoriteAnime containerType="anime" currentUser=currentUser user=user.model}}
       <div class="feed-sidebar-advert">
         {{ad-unit adId="1298406" adClass="257f81e798bd68dd81e60f42838f361f"}}
       </div>
 
-      {{favorite-container favorites=favoriteManga containerType="manga" currentUser=currentUser user=user}}
+      {{favorite-container favorites=favoriteManga containerType="manga" currentUser=currentUser user=user.model}}
       <div class="feed-sidebar-advert">
         {{ad-unit adId="1298406" adClass="257f81e798bd68dd81e60f42838f361f"}}
       </div>
