--- a/frontend/app/templates/anime/_franchise.hbs
+++ b/frontend/app/templates/anime/_franchise.hbs
@@ -9,7 +9,9 @@
           <h4 class="series-title">
             {{#link-to 'anime' anime.id}}{{anime.displayTitle}}{{/link-to}}
           </h4>
-          {{partial "anime/infobar"}}
+          {{#with anime as |model|}}
+            {{partial "anime/infobar"}}
+          {{/with}}
           <div>{{truncate-text text=anime.synopsis length=200}}</div>
         </div>
       </div>
