fix dashboard tabs - fixes #527

--- a/frontend/app/templates/dashboard.hbs
+++ b/frontend/app/templates/dashboard.hbs
@@ -167,7 +167,7 @@
         </span>
       </div>
 
-      {{#each model itemController="story" as |story|}}
+      {{#each arrangedContent itemController="story" as |story|}}
         {{#with story as |story|}}
           {{view "story" content=story}}
         {{/with}}
