--- a/app/assets/stylesheets/partials/anime-page.css.scss
+++ b/app/assets/stylesheets/partials/anime-page.css.scss
@@ -183,9 +183,9 @@
       position: relative;
       padding-right: 10px;
       color: #838a91;
--     &:last-child {
--       padding-right: 0;
--     }
+      &:last-child {
+        padding-right: 0;
+      }
     }
   }
 }
