--- a/frontend/app/templates/apps/index.hbs
+++ b/frontend/app/templates/apps/index.hbs
@@ -16,7 +16,7 @@
               <a {{bind-attr href=link.link}}>{{link.name}}</a>
             {{/each}}
           </div>
-          <div class="app-screens block-grid-md-2 block-grid-sm-1">
+          <div class="app-screens block-grid-sm-2">
             {{#each app.screenshots as |screenshot|}}
               <div class="block-grid-item">
                 <img src="{{unbound screenshot}}">
