--- a/app/assets/stylesheets/partials/apps-page.css.scss
+++ b/app/assets/stylesheets/partials/apps-page.css.scss
@@ -48,6 +48,26 @@
     border: 1px solid #ddd;
   }
 
+  .app-card-new {
+    .app-card-new-form-container {
+      position: relative;
+      input {
+        padding-right: 80px;
+      }
+      .btn {
+        position: absolute;
+        right: 0;
+        top: 0;
+        background: #e67e22;
+        color: #fff;
+        transition: .2s ease-in;
+        &:hover {
+          background: darken(#e67e22,10);
+        }
+      }
+    }
+  }
+
   .app-image {
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
