Added a small padding-top/-bottom for polishing the look

--- a/app/assets/stylesheets/partials/user-cover-image.css.scss
+++ b/app/assets/stylesheets/partials/user-cover-image.css.scss
@@ -121,7 +121,7 @@
         color: #333;
         width: 470px;
         background: rgba(255,255,255,.8);
-        padding: 0 10px;
+        padding: 5px 10px;
       }
       @media (max-width: 1200px) { padding-left: 30px; }
       @media (max-width: 990px) { padding-left: 15px; }
