--- a/app/assets/stylesheets/partials/anime-page.css.scss
+++ b/app/assets/stylesheets/partials/anime-page.css.scss
@@ -84,7 +84,7 @@
   @media (max-width: 860px) {
     width: 100%;
   }
-  
+
   .trending-review-empty {
     margin-top: 39px;
   }
@@ -126,6 +126,7 @@
     position: relative;
   }
   .series-poster {
+    width: 100%;
     max-width: 100%;
     border-radius: 3px;
   }
