You make our kokoro go dokidoki

--- a/frontend/app/templates/footer.hbs
+++ b/frontend/app/templates/footer.hbs
@@ -2,7 +2,7 @@
   <div class="footer-contents">
     <div class="container">
       <ul class="site-footer-links right">
-        <li>
+        <li title="You make our kokoro go dokidoki">
           <span class="hb-luvs"></span>
           {{#if currentUser.isSignedIn}}
             <span class="footer-heart">
