--- a/frontend/app/templates/header.hbs
+++ b/frontend/app/templates/header.hbs
@@ -21,7 +21,8 @@
           <!-- <i class='dropdown-arrow dropdown-arrow-inverse'></i> -->
           <ul class='dropdown-menu left-nav-section'>
             <li>{{#link-to 'user.index' currentUser.id}}Profile{{/link-to}}</li>
-            <li>{{#link-to 'user.library' currentUser.id}}Library{{/link-to}}</li>
+            <li>{{#link-to 'user.library' currentUser.id}}Anime Library{{/link-to}}</li>
+            <li>{{#link-to 'user.manga_library' currentUser.id}}Manga Library{{/link-to}}</li>
             <li><a href='/recommendations'>Recommendations</a></li>
           </ul>
         </li>
