Show arrows when viewing on half a 1080p screen

--- a/app/assets/stylesheets/components/quick-update.css.scss
+++ b/app/assets/stylesheets/components/quick-update.css.scss
@@ -132,10 +132,8 @@
       width: 870px;
     }
     .watched-series {
-      max-width: 170px;
-    }
-    .update-arrow {
-      display: none;
+      max-width: 134px;
+      min-width: 134px;
     }
     .seen-text {
       display: none;
